# omfilesrspy

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
.github/actions/build_wheels/: action.yml
.github/actions/run-tests/: action.yaml  action.yml
.github/actions/test/: action.yml
.github/workflows/: CI.yml  build-test.yml  build.yml  publish.yml  release.yml  test.yml
.zed/: settings.json  tasks.json
benchmarks/: benchmarks.py  main.py
benchmarks/helpers/: args.py  benchmark_results.py  formats.py  generate_data.py  prints.py  stats.py
benchmarks/helpers/io/: readers.py  writers.py
examples/: latlonplot.py
notebooks/: multidim_example.ipynb
omfilesrspy/: __init__.py  xarray_backend.py
python/omfiles/: __init__.py  omfiles.pyi  xarray_backend.py
python/omfilesrspy/: __init__.py  omfilesrspy.pyi  types.py  xarray_backend.py
python/pyomfiles/: __init__.py  types.py  xarray_backend.py
src/: array_index.rs  compression.rs  data_type.rs  errors.rs  fsspec_backend.rs  hierarchy.rs  lib.rs  reader.rs  test_utils.rs  utils.rs  variable_tree.rs  writer.rs
src/backend/: backends.rs  mmapfile.rs
src/core/: c_defaults.rs  compression.rs  data_types.rs
src/io/: buffered_writer.rs  reader.rs  writer.rs
src/python/: data_type.rs  errors.rs  fsspec_backend.rs  mod.rs  reader.rs  test_utils.rs  writer.rs
tests/: conftest.py  errors.rs  omfiles_tests.rs  test_fsspec.py  test_omfilesrspy.py  test_resources.py  test_utils.py  test_xarray.py
