[package]
name = "omfilesrspy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "omfilesrspy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py38"] }
numpy = "0.23"
omfiles-rs = { git = "https://github.com/terraputix/omfiles-rs", branch = "multidim-file-format" }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
