[package]
name = "omfilesrspy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "omfilesrspy"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "testread"
path = "src/bin/testread.rs"

[[bin]]
name = "reformat"
path = "src/bin/reformat.rs"

[dependencies]
num-traits = "0.2.14"
ndarray = "0.16.0"
delegate = "0.13"
memmap2 = "0.9.4"
om-file-format-sys = { version = "1.0.3" }

# Python dependencies are optional:
pyo3 = { version = "0.23", features = ["abi3-py38"], optional = true }
numpy = { version = "0.23", optional = true }

[features]
python = ["pyo3", "numpy"]
python-extension = ["python", "extension-module"]
extension-module = ["pyo3/extension-module"]
all = ["python-extension"]
test-all = ["python"]
default = []
