[package]
name = "omfilesrspy"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "omfiles"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py38"] }
numpy = "0.23"
num-traits = "0.2"
delegate = "0.13"
omfiles-rs = { git = "https://github.com/terraputix/omfiles-rs", branch = "main" }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
