[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "omfilesrspy"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["numpy>=1.20.0", "cffi>=1.14.0"]

# Support multiple CPython versions with a single wheel
[tool.maturin]
bindings = "cffi"

[project.optional-dependencies]
dev = ["pytest>=6.0"]
