[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "omfilesrspy"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.16.0",
    "fsspec>=2023.1.0",
    "s3fs>=2023.1.0",
    "xarray>=2023.1.0",
]

[tool.maturin]
python-source = "python" # Python source code is in the `python` directory
bindings = "pyo3"        # pyo3 bindings is actually the default for maturin
# features = ["pyo3/extension-module"]

[project.optional-dependencies]
dev = ["pytest>=6.0", "hidefix", "h5py", "netCDF4", "zarr"]

[project.entry-points."xarray.backends"]
om = "omfilesrspy.xarray_backend:OmXarrayEntrypoint"
